# Calc

./: CMakeLists.txt  main.c
include/: bistro.h  lists.h
src/: bigint_add.c  bigint_compare.c  bigint_create.c  bigint_div.c  bigint_invert.c  bigint_mod.c  bigint_mul.c  bigint_parse.c  bigint_print.c  bigint_simplify_neg.c  bigint_sub.c  bigint_zero.c  calc.c  expr_tokenize.c  list_append.c  list_create.c  token_create.c  tokens_advance.c  tokens_eval.c  tokens_type.c  tokens_value.c
